feat(api): added endpoints for authors, manufacturers and mpns
